@@ -5,6 +5,8 @@ Revision history for Perl extension Net::SSLeay.
 	  been released under the terms of the Artistic License 2.0 since
 	  version 1.66; references to other licenses have been removed. Fixes
 	  RT#106314. Thanks to Kent Fredric for pointing out the ambiguity.
+	- Replace the HTTPS hosts in the external tests (some of which were
+	  no longer online) with more resilient ones. Closes issue #26.
 
 1.86_10 2019-05-04
 	- Use locally-generated certificate chain in local tests rather
